--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- header end -->
     <main>
       <!-- team section start -->
-       <section>
+       <section class="section1-container">
         <div class="team-img-container">
            <img src="./images/team1.png" alt="">
            <img src="./images/team2.png" alt="">
@@ -44,12 +44,13 @@
            <img src="./images/team4.png" alt="">
         </div>
         <div class="team-content">
-           <h3 class="section-title"><span class="quick-span">Quick list</span> Of Our<span class="feature-span">Feature</span></h3>
+           <h3 class="section-title"><span class="quick-span">Quick list</span> Of Our <br><span class="feature-span">Feature</span></h3>
+           <p class="section-description">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
         </div>
-        <p class="section-description">
-          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
-        </p>
-        <button class="btn-primary">Explore More</button>
+        
        </section>
        
 
