--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
         </div>
         
        </section>
+       <!-- team section end -->
+        <section class="section3">
+          <div class="fact-content">
+            <h3 class="section-title">
+              Some Facts
+            </h3>
+            <p class="section-description">
+              There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.
+            </p>
+          </div>
+          <div class="card-container">
+            <div class="card">
+              <img src="./images/icons/email.png" alt="">
+              <h1 class="fact-title">54</h1>
+              <p class="fact-description">Awards Winnings</p>
+            </div>
+            <div class="card">
+              <img src="./images/icons/projects.png" alt="">
+              <h1 class="fact-title">54</h1>
+              <p class="fact-description">Project Finished</p>
+            </div>
+            <div class="card">
+              <img src="./images/icons/ribon.png" alt="">
+              <h1 class="fact-title">54</h1>
+              <p class="fact-description">Email Sends</p>
+            </div>
+            <div class="card">
+              <img src="./images/icons/customers.png" alt="">
+              <h1 class="fact-title">54</h1>
+              <p class="fact-description">Clients Worked</p>
+            </div>
+          </div>
+        </section>
        
 
     </main>
