--- a/index.html
+++ b/index.html
@@ -52,8 +52,41 @@
         </div>
         
        </section>
+  <!-- feature section  -->
+   <section class="feature-section">
+    <div class="feature-container">
+      <div class="feature-content">
+        <h3 class="section-title">Features you will love & enjoy</h3>
+        <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <div class="box">
+          <h5 class="box-title">Dexktop & Mobile Version</h5>
+          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="box">
+          <h5 class="box-title">Dexktop & Mobile Version</h5>
+          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="box">
+          <h5 class="box-title">Dexktop & Mobile Version</h5>
+          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+        <div class="box">
+          <h5 class="box-title">Dexktop & Mobile Version</h5>
+          <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        </div>
+      </div>
+      <div class="feature-img">
+        <img src="./images/architect.png" alt="">
+      </div>
+    </div>
+    <div class="experience">
+      <h1>10+ Year </h1>
+      <p>Experience</p>
+    </div>
+
+   </section>
        
- <!-- fact section end -->         
+ <!-- fact section start -->         
         <section class="section3">
           <div class="fact-content">
             <h3 class="section-title">
