done feature section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
    <section class="feature-section">
     <div class="feature-container">
       <div class="feature-content">
-        <h3 class="section-title">Features you will love & enjoy</h3>
+        <div class="side-border">
+          <h3 class="section-title ">Features you will love & enjoy</h3>
+        </div>
         <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <div class="box">
           <h5 class="box-title">Dexktop & Mobile Version</h5>
@@ -77,12 +79,13 @@
       </div>
       <div class="feature-img">
         <img src="./images/architect.png" alt="">
+        <div class="experience">
+          <h1>10++Year </h1>
+          <p>Experience</p>
+        </div>
       </div>
     </div>
-    <div class="experience">
-      <h1>10+ Year </h1>
-      <p>Experience</p>
-    </div>
+    
 
    </section>
        
